--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
+<header>
+  <div class="page-header">
+    <h1 class="title">DetoxH20 <small>Refresh and detox with water</small></h1>
+  </div>
+</header>
+
 <body>
-<div class="page-header">
-  <h4>DetoxH20 <small>Refresh and detox with water</small></h4>
+  <div class="container">
+    <p class="bio"> Bio of water here</p>
+
+    <div class="detoxH20">
+    </div>
 </div>
-<div class="detoxH20"></div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="constants.js"></script>
 <script type="text/javascript" src="index.js"></script>
