--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
 </head>
 <header>
   <div class="page-header">
-    <h1 class="title">DetoxH20 <small>Refresh and detox with water</small></h1>
+    <h1 class="title">DetoxH20 <span>Refresh and detox with water</span></h1>
   </div>
 </header>
 
 <body>
   <div class="container">
-    <p class="bio"> Bio of water here</p>
+    <p class="bio"> bio here here</p>
 
     <div class="detoxH20">
+
     </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
+
 </body>
 </html>
