--- a/detail.html
+++ b/detail.html
@@ -5,15 +5,18 @@
   <title>Detox H20</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="style.css" type="text/css" /> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="detail.js"></script>
 
+
+  <!-- <link rel="stylesheet" href="style.css" type="text/css" /> -->
 </head>
 <body>
   <h2>Drinks</h2>
   <a href="index.html">< Back to all Drinks</a>
-<div class="drink-detail"></div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <div class="drink-detail">
 
-<script type="text/javascript" src="detail.js"></script>
+  </div>
+
 </body>
 </html>
