--- a/detail.html
+++ b/detail.html
@@ -18,5 +18,44 @@
 
   </div>
 
+  <form id="my-form">
+    <label for="drink">Which Drink?</label>
+    <input type="text" name="drink" placeholder="Highlight?"/><br>
+
+    <label for="name">How many people</label>
+    <input type="text" name="count-of-people" /><br>
+
+    <label for="name">Name</label>
+    <input type="text" name="name" /><br>
+
+    <label for="organization">Organization</label>
+    <input type="text" name="organization" /><br>
+
+    <label for="address">Address</label>
+    <input type="text" name="address" /><br>
+
+    <label for="city">City</label>
+    <input type="text" name="city" /><br>
+
+    <label for="when">When</label>
+    <input type="text" name="zip" placeholder="mm/dd/yy"/><br>
+
+    <label for="time">Time</label>
+    <input type="text" name="zip" placeholder="00:00am/pm"/><br>
+
+    <label for="Phone Number">Phone Number</label>
+    <input type="text" name="phone Number"/><br>
+
+    <label for="email">Email</label>
+    <input type="text" name="email" placeholder=".com"/><br>
+
+     <label for="questions and concerns">Questions and concerns</label>
+    <input type="text" name="questions and concerns "placeholder="I would like to add more blue berries please"/><br><br>
+
+     <br ><button type="submit">Detox</button>
+  </form>
+  <div id="submit-message"></div>
+
+
 </body>
 </html>
