--- a/detail.html
+++ b/detail.html
@@ -17,66 +17,71 @@
   <div class="drink-detail">
 
   </div>
+  <div class="drinkform-background" style="background-color:#e6e6e6">
+    <h3>Contact Us Today!</h3>
+    <center>
+      <div class="drinkform">
+          <form id="my-form">
+            <label for="drink">Which Drink?</label><br>
+            <input type="checkbox" name="Highlight" value="Hightlight"> Highlight
+            <select name="amount-hightlight">
+               <option value="zero">0</option>
+              <option value="five">5</option>
+              <option value="ten">10</option>
+              <option value="twenty">20</option>
+            </select>
+            <br>
+            <input type="checkbox" name="Beastmood" value="Beastmood"> Beast mood
+              <select name="amount-beastmood">
+                 <option value="zero">0</option>
+              <option value="five">5</option>
+              <option value="ten">10</option>
+              <option value="twenty">20</option>
+            </select>
+            <br>
+              <input type="checkbox" name="Kickstart" value="Kickstart"> Kick start
+            <select name="amount-kickstart">
+                 <option value="zero">0</option>
+              <option value="five">5</option>
+              <option value="ten">10</option>
+              <option value="twenty">20</option>
+            </select>
+            <br>
+              <label for="name">How many people</label>
+            <input type="number" name="count-of-people" /><br>
 
-  <form id="my-form">
-    <label for="drink">Which Drink?</label><br>
-    <input type="checkbox" name="Highlight" value="Hightlight"> Highlight
-    <select name="amount-hightlight">
-       <option value="zero">0</option>
-      <option value="five">5</option>
-      <option value="ten">10</option>
-      <option value="twenty">20</option>
-    </select>
-    <br>
-    <input type="checkbox" name="Beastmood" value="Beastmood"> Beast mood
-      <select name="amount-beastmood">
-         <option value="zero">0</option>
-      <option value="five">5</option>
-      <option value="ten">10</option>
-      <option value="twenty">20</option>
-    </select>
-    <br>
-      <input type="checkbox" name="Kickstart" value="Kickstart"> Kick start
-    <select name="amount-kickstart">
-         <option value="zero">0</option>
-      <option value="five">5</option>
-      <option value="ten">10</option>
-      <option value="twenty">20</option>
-    </select>
-    <br>
-      <label for="name">How many people</label>
-    <input type="number" name="count-of-people" /><br>
+            <label for="name">Name</label>
+            <input type="text" name="name" /><br>
 
-    <label for="name">Name</label>
-    <input type="text" name="name" /><br>
+            <label for="company">company</label>
+            <input type="text" name="company" /><br>
 
-    <label for="company">company</label>
-    <input type="text" name="company" /><br>
+            <label for="address">Address</label>
+            <input type="text" name="address" /><br>
 
-    <label for="address">Address</label>
-    <input type="text" name="address" /><br>
+            <label for="city">City</label>
+            <input type="text" name="city" /><br>
 
-    <label for="city">City</label>
-    <input type="text" name="city" /><br>
+            <label for="date">Date</label>
+            <input type="date" name="date" placeholder="mm/dd/yy"/><br>
 
-    <label for="date">Date</label>
-    <input type="date" name="date" placeholder="mm/dd/yy"/><br>
+            <label for="time">Time</label>
+            <input type="time" name="zip"/><br>
 
-    <label for="time">Time</label>
-    <input type="time" name="zip"/><br>
+            <label for="phoneNumber">Phone Number</label>
+            <input type="tel" name="phoneNumber"/><br>
 
-    <label for="phoneNumber">Phone Number</label>
-    <input type="tel" name="phoneNumber"/><br>
+            <label for="email">Email</label>
+            <input type="email" name="email" placeholder=".com"/><br>
 
-    <label for="email">Email</label>
-    <input type="email" name="email" placeholder=".com"/><br>
+             <label for="questionsAndConcerns">Questions and concerns</label><br>
+            <textarea type="text" name="questionsAndConcerns "placeholder="I would like to add more blue berries please"></textarea><br><br>
 
-     <label for="questionsAndConcerns">Questions and concerns</label><br>
-    <textarea type="text" name="questionsAndConcerns "placeholder="I would like to add more blue berries please"></textarea><br><br>
-
-     <br ><button type="submit">Detox</button>
-  </form>
-  <div id="submit-message"></div>
+             <br ><button type="submit">Detox</button>
+          </form>
+        </div>
+      </center>
+</div>
 
 
 </body>
